Split out library code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 
-name = "refgraph"
+name = "copygraph"
 version = "0.0.1"
 authors = ["bluss"]
+
+[lib]
+
+name = "copygraph"
 
 [[bin]]
 
 name = "bin"
+path = "src/bin.rs"
