--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ name = "petgraph"
 version = "0.0.1"
 authors = ["bluss"]
 
+description = "Graph data structure."
+documentation = "bluss.github.io/petulant-avenger-graphlibrary/target/doc/petgraph"
+repository = "https://github.com/bluss/petulant-avenger-graphlibrary"
+
+keywords = ["container", "data-structure", "graph"]
+
 [lib]
 
 name = "petgraph"
