--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,10 @@
 name = "petgraph"
 version = "0.0.1"
 authors = ["bluss"]
+license = "MIT/Apache-2.0"
 
 description = "Graph data structure."
-documentation = "bluss.github.io/petulant-avenger-graphlibrary/target/doc/petgraph"
+documentation = "http://bluss.github.io/petulant-avenger-graphlibrary/target/doc/petgraph"
 repository = "https://github.com/bluss/petulant-avenger-graphlibrary"
 
 keywords = ["container", "data-structure", "graph"]
