--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: rust
 sudo: false
 matrix:
   include:
+    - rust: 1.0.0
+    - rust: 1.1.0
+    - rust: 1.2.0
+    - rust: 1.3.0
     - rust: stable
     - rust: beta
     - rust: nightly
