Add quickcheck / Arbitrary impl for Graph

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ debug = true
 
 [dependencies]
 fixedbitset = "0.1.0"
+quickcheck = { optional = true, version = "0.2.24" }
 
 [dev-dependencies]
 rand = "0.3"
