Set rand (dev-dependency) to 0.3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,11 @@ name = "petgraph"
 [profile.bench]
 debug = true
 
-[dependencies.fixedbitset]
-version = "0.1.0"
+[dependencies]
+fixedbitset = "0.1.0"
 
-[dev-dependencies.rand]
+[dev-dependencies]
+rand = "0.3"
 
 [features]
 
