--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
       env:
        - FEATURES='test quickcheck'
        - BENCH=1
+branches:
+  only:
+    - master
 script:
   - |
       cargo build --verbose --features "$FEATURES" &&
