--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ matrix:
       env:
        - FEATURES='test unstable quickcheck'
        - BENCH=1
+branches:
+  only:
+    - master
 script:
   - |
       cargo build --verbose --features "$FEATURES" &&
