--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "petgraph"
-version = "0.2.6"
+version = "0.2.7"
 license = "MIT/Apache-2.0"
 authors = [
 "bluss",
@@ -9,8 +9,8 @@ authors = [
 ]
 
 description = "Graph data structure library. Provides graph types and graph algorithms."
-documentation = "http://bluss.github.io/petulant-avenger-graphlibrary"
-repository = "https://github.com/bluss/petulant-avenger-graphlibrary"
+documentation = "http://bluss.github.io/petgraph"
+repository = "https://github.com/bluss/petgraph"
 
 keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
 
