Depend on itertools 0.5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ debug = true
 [dependencies]
 fixedbitset = "0.1.0"
 quickcheck = { optional = true, version = "0.3" }
+itertools = "0.5"
 
 [dev-dependencies]
 rand = "0.3"
