--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "petgraph"
-version = "0.3.0-alpha.3"
+version = "0.3.0"
 license = "MIT/Apache-2.0"
 authors = [
 "bluss",
@@ -34,12 +34,13 @@ rand = "0.3"
 odds = { version = "0.2.19" }
 
 [features]
+default = ["graphmap", "stable_graph"]
+graphmap = ["ordermap"]
+stable_graph = []
+
 # For unstable features
 generate = []
 unstable = ["generate"]
-default = ["graphmap", "stable_graph"]
-stable_graph = []
-graphmap = ["ordermap"]
 
 # feature flags for testing use only
 test = []
