--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ debug = true
 [dependencies]
 fixedbitset = "0.1.2"
 quickcheck = { optional = true, version = "0.3" }
-ordermap = { version = "0.2.2" }
+ordermap = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
 rand = "0.3"
@@ -37,9 +37,10 @@ odds = { version = "0.2.19" }
 # For unstable features
 generate = []
 unstable = ["generate"]
-default = ["stable_graph"]
+default = ["graphmap", "stable_graph"]
 stable_graph = []
+graphmap = ["ordermap"]
 
 # feature flags for testing use only
 test = []
-all = ["test", "unstable", "quickcheck"]
+all = ["test", "unstable", "quickcheck", "stable_graph", "graphmap"]
