--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ordermap = { version = "0.2.2", optional = true }
 [dev-dependencies]
 rand = "0.3"
 odds = { version = "0.2.19" }
+itertools = { version = "0.5" }
 
 [features]
 default = ["graphmap", "stable_graph"]
