--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ bench = false
 debug = true
 
 [dependencies]
-fixedbitset = "0.1.2"
+fixedbitset = { version = "0.1.3" }
 quickcheck = { optional = true, version = "0.3" }
 ordermap = { version = "0.2.2", optional = true }
 
