MatrixGraph: add initial implementation
This commit adds a `Matrix` which implements all graph traits using a
dense adjacency matrix for its underlying structure.

The matrix itself is represented as a flat array where each entry is an
edge. A node's outgoing edges are all the entries in [n..n+capacity],
the capacity being the number of nodes the matrix can hold until the
next resize.

The capacity itself is always guaranteed to be a power of two, which
helps optimize a few operations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,17 +41,18 @@ defmac = "0.1"
 itertools = { version = "0.8", default-features = false }
 
 [features]
-default = ["graphmap", "stable_graph"]
+default = ["graphmap", "stable_graph", "matrix_graph"]
 graphmap = ["indexmap"]
 serde-1 = ["serde", "serde_derive"]
 stable_graph = []
+matrix_graph = []
 
 # For unstable features
 generate = []
 unstable = ["generate"]
 
 # feature flags for testing use only
-all = ["unstable", "quickcheck", "stable_graph", "graphmap"]
+all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]
 
 [workspace]
 members = ["serialization-tests"]
