--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: false
 matrix:
   include:
     - rust: 1.12.0
+      env:
+      - ALL=''
     - rust: stable
       env:
       - FEATURES='unstable quickcheck'
@@ -20,4 +22,4 @@ script:
       cargo build --verbose --no-default-features &&
       cargo test --verbose --no-default-features &&
       cargo build --verbose --features "$FEATURES" &&
-      cargo test --verbose --features "$FEATURES"
+      cargo test ${ALL:---all} --verbose --features "$FEATURES") &&
