--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,16 +29,19 @@ debug = true
 fixedbitset = { version = "0.1.4" }
 quickcheck = { optional = true, version = "0.4", default-features = false }
 ordermap = { version = "0.2.2", optional = true }
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+itertools = { version = "0.6.2" }
 
 [dev-dependencies]
 rand = "0.3"
 odds = { version = "0.2.19" }
-itertools = { version = "0.6.2" }
 defmac = "0.1"
 
 [features]
 default = ["graphmap", "stable_graph"]
 graphmap = ["ordermap"]
+serde-1 = ["serde", "serde_derive"]
 stable_graph = []
 
 # For unstable features
@@ -47,3 +50,6 @@ unstable = ["generate"]
 
 # feature flags for testing use only
 all = ["unstable", "quickcheck", "stable_graph", "graphmap"]
+
+[workspace]
+members = ["serialization-tests"]
