--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   include:
     - rust: 1.12.0
       env:
-      - ALL=''
+      - ALL=' '
     - rust: stable
       env:
       - FEATURES='unstable quickcheck'
@@ -22,4 +22,4 @@ script:
       cargo build --verbose --no-default-features &&
       cargo test --verbose --no-default-features &&
       cargo build --verbose --features "$FEATURES" &&
-      cargo test ${ALL:---all} --verbose --features "$FEATURES") &&
+      cargo test ${ALL:---all} --verbose --features "$FEATURES"
