--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "petgraph"
-version = "0.4.7-pre"
+version = "0.4.7"
 license = "MIT/Apache-2.0"
 authors = [
 "bluss",
@@ -56,3 +56,6 @@ members = ["serialization-tests"]
 
 [package.metadata.docs.rs]
 features = ["serde-1", "quickcheck"]
+
+[package.metadata.release]
+no-dev-version = true
