--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
       env:
       - ALL=' '
     - rust: 1.15.0
+      - ALL=' '
     - rust: stable
       env:
       - FEATURES='unstable quickcheck'
