--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ quickcheck = { optional = true, version = "0.4", default-features = false }
 ordermap = { version = "0.3.0", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+xml-rs = { version = "0.7.0", optional = true }
 
 [dev-dependencies]
 rand = "0.3"
@@ -41,6 +42,7 @@ itertools = { version = "0.7.0", default-features = false }
 [features]
 default = ["graphmap", "stable_graph"]
 graphmap = ["ordermap"]
+graphml = ["xml-rs"]
 serde-1 = ["serde", "serde_derive"]
 stable_graph = []
 
@@ -55,7 +57,7 @@ all = ["unstable", "quickcheck", "stable_graph", "graphmap"]
 members = ["serialization-tests"]
 
 [package.metadata.docs.rs]
-features = ["serde-1", "quickcheck"]
+features = ["graphml", "serde-1", "quickcheck"]
 
 [package.metadata.release]
 no-dev-version = true
