--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ matrix:
     - rust: 1.15.0
       env:
       - ALL=' '
+    - rust: 1.25.0
+      env:
+      - ALL=' '
     - rust: stable
       env:
       - FEATURES='unstable quickcheck'
