Added no_std feature switch.
Using this feature switch will also turn on alloc feature switch which
is used to determine if the collections used in the library should be
imported from the alloc library or not.

Most notable change in no_std is that instead of a HashMap and Set
a BTreeMap and Set are used.

Other squashed changes:
- Added cfg_attr for switching on nightly alloc feature
- Added nightly travis test with no_std feature enabled
- Fixed travis.yml syntax
- Use fixedbitset with no_std feature in no_std mode
- Run cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.5.1"
 license = "MIT/Apache-2.0"
 authors = [
 "bluss",
-"mitchmindtree",
+"mitchmindtree"
 ]
 
 description = "Graph data structure library. Provides graph types and graph algorithms."
@@ -31,7 +31,7 @@ debug = true
 fixedbitset = { version = "0.3.0", default-features = false }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 indexmap = { version = "1.0.2" }
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", optional = true, default-features = false }
 serde_derive = { version = "1.0", optional = true }
 
 [dev-dependencies]
@@ -43,9 +43,12 @@ itertools = { version = "0.8", default-features = false }
 [features]
 default = ["graphmap", "stable_graph", "matrix_graph"]
 graphmap = []
-serde-1 = ["serde", "serde_derive"]
+serde-1 = ["serde/default", "serde_derive"]
+serde-1-no_std = ["serde", "serde_derive"]
 stable_graph = []
 matrix_graph = []
+no_std = ["alloc"]
+alloc = []
 
 # For unstable features
 generate = []
