--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ debug = true
 
 [dependencies]
 fixedbitset = { version = "0.1.4" }
+itertools = { version = "0.8" }
 quickcheck = { optional = true, version = "0.7.1", default-features = false }
 indexmap = { version = "1.0.2", optional = true }
 serde = { version = "1.0", optional = true }
@@ -36,7 +37,7 @@ serde_derive = { version = "1.0", optional = true }
 rand = "0.5.5"
 odds = { version = "0.2.19" }
 defmac = "0.1"
-itertools = { version = "0.7.0", default-features = false }
+itertools = { version = "0.8.0", default-features = false }
 
 [features]
 default = ["graphmap", "stable_graph"]
