--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,12 @@ categories = ["data-structures"]
 
 edition = "2018"
 
+[package.metadata.docs.rs]
+features = ["serde-1", "quickcheck"]
+
+[package.metadata.release]
+no-dev-version = true
+
 [lib]
 
 name = "petgraph"
@@ -33,6 +39,7 @@ quickcheck = { optional = true, version = "0.8", default-features = false }
 indexmap = { version = "1.0.2", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+disjoint-sets = "0.4.2"
 
 [dev-dependencies]
 rand = "0.5.5"
@@ -55,9 +62,3 @@ all = ["unstable", "quickcheck", "stable_graph", "graphmap"]
 
 [workspace]
 members = ["serialization-tests"]
-
-[package.metadata.docs.rs]
-features = ["serde-1", "quickcheck"]
-
-[package.metadata.release]
-no-dev-version = true
