Add "serde-1" support to GraphMap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ itertools = { version = "0.8", default-features = false }
 [features]
 default = ["graphmap", "stable_graph", "matrix_graph"]
 graphmap = []
-serde-1 = ["serde", "serde_derive"]
+serde-1 = ["serde", "serde_derive", "indexmap/serde-1"]
 stable_graph = []
 matrix_graph = []
 
