--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ jobs:
       - ALL=' '
     - rust: stable
       env:
-        - FEATURES='unstable quickcheck'
+        - FEATURES='unstable apply_quickcheck'
         - CHECKFMT=1
     - rust: beta
     - rust: nightly
     - rust: nightly
       env:
-       - FEATURES='unstable quickcheck'
+       - FEATURES='unstable apply_quickcheck'
        - BENCH=1
 branches:
   only:
