pick bincode version and rename benches

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ rand = "0.5.5"
 odds = { version = "0.2.19" }
 defmac = "0.1"
 itertools = { version = "0.8", default-features = false }
-bincode = "*"
+bincode = "1.3.3"
 
 [features]
 default = ["graphmap", "stable_graph", "matrix_graph"]
