--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "petgraph"
 version = "0.6.0"
-readme = "README.rst"
+readme = "README.md"
 license = "MIT/Apache-2.0"
 authors = [
 "bluss",
