--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ indexmap = { version = "1.6.2" }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+num = { version = "0.4.0" }
 
 [dev-dependencies]
 bincode = "1.3.3"
