Loose the dependency version for indexmap
Rolls back the previous hotfix, and makes the CI specifically set an
older version when testing on MSRV.
I also added a comment to the README with a link to the fix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
       matrix:
         include:
           - rust: 1.41.0  # MSRV
+            # Fix an old minor version of some dependencies to ensure they
+            # compile with the MSRV
+            fixed_deps: -p indexmap --precise 1.7.0
           - rust: stable
             features: unstable quickcheck
             test_all: --all
@@ -36,6 +39,7 @@ jobs:
           override: true
       - name: Build
         run: |
+          cargo update ${{ matrix.fixed_deps }}
           cargo build --verbose --no-default-features
           cargo build --verbose --features "${{ matrix.features }}"
       - name: Tests
