--- a/serialization-tests/Cargo.toml
+++ b/serialization-tests/Cargo.toml
@@ -10,7 +10,7 @@ authors = [
 
 description = ""
 documentation = ""
-repository = "https://github.com/bluss/petgraph"
+repository = "https://github.com/petgraph/petgraph"
 
 
 [dependencies]
@@ -18,7 +18,9 @@ petgraph = { path = "..", features = ["serde-1", "quickcheck"] }
 itertools = { version = "0.10.1" }
 
 [dev-dependencies]
+serde = "1.0"
 serde_json = "1.0"
+serde_derive = "1.0"
 quickcheck = { version = "0.8", default-features = false }
 bincode = "1.3.3"
 defmac = "0.2.1"
