Add Miri to GitHub CI
Disables some tests that take too long to run while under Miri,
and adds `features = ["std"]` to the `indexmap` dependency so it
compiles correctly under Miri.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,3 +72,12 @@ jobs:
       - name: Rustfmt
         if: matrix.rustfmt
         run: cargo fmt -- --check
+
+  miri:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: miri
+      - run: cargo miri test
