--- a/clippy.toml
+++ b/clippy.toml
@@ -1,1 +1,6 @@
-msrv = "1.41.0"
+msrv = "1.65.0"
+
+allow-expect-in-tests = true
+allow-unwrap-in-tests = true
+allow-dbg-in-tests = true
+allow-print-in-tests = true
