ci: add components

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
+          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -73,6 +74,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
+          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -102,6 +104,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
+          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
