--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -74,7 +74,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -104,7 +104,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          components: "${{ matrix.toolchain == 'nightly' ? 'rustfmt clippy llvm-tools-preview miri' : 'rustfmt clippy' }}"
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
