--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' || 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -74,7 +74,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' || 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
@@ -100,11 +100,12 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' }} ${{ matrix.toolchain != 'nightly' && 'rustfmt clippy' }}
+          components: ${{ matrix.toolchain == 'nightly' && 'rustfmt clippy llvm-tools-preview miri' || 'rustfmt clippy' }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v1
