--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "petgraph"
 version = "0.6.3"
@@ -27,6 +28,9 @@ features = ["serde-1", "quickcheck"]
 [package.metadata.release]
 no-dev-version = true
 
+[workspace]
+members = ["serialization-tests", "core"]
+
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
 indexmap = { version = "1.7", features = ["std"] }
@@ -54,9 +58,6 @@ matrix_graph = []
 serde-1 = ["serde", "serde_derive"]
 stable_graph = []
 unstable = ["generate"]
-
-[workspace]
-members = ["serialization-tests"]
 
 
 [lib]
