--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-
 [package]
 name = "petgraph"
 version = "0.6.3"
@@ -37,6 +36,7 @@ indexmap = { version = "1.7", features = ["std"] }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+petgraph-core = { path = "./core" }
 
 [dev-dependencies]
 bincode = "1.3.3"
