--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+funty = { version = "2.0.0", default-features = false }
 fixedbitset = { version = "0.4.2", default-features = false, optional = true }
 
 [dev-dependencies]
