--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+funty = { version = "2.0.0", default-features = false }
+fixedbitset = { workspace = true, optional = true }
+petgraph-core = { workspace = true, features = ['alloc'] }
+
+[dev-dependencies]
+# Used for documentation examples
+petgraph.workspace = true
+
+[features]
+default = ["std"]
+std = ["fixedbitset?/std", "petgraph-core/std"]
