--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 
 [dependencies]
 funty = { version = "2.0.0", default-features = false }
-fixedbitset = { version = "0.4.2", default-features = false, optional = true }
+fixedbitset = { workspace = true, optional = true }
 
 [dev-dependencies]
 # Used for documentation examples
-petgraph = { path = ".." }
+petgraph.workspace = true
 
 [features]
 default = ["std"]
