--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,8 @@ indexmap = { version = "1.7", features = ["std"] }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
-petgraph-core = { path = "./core" }
+petgraph-core = { workspace = true }
+petgraph-graph = { workspace = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -55,15 +56,15 @@ rand = "0.5.5"
 [features]
 
 # feature flags for testing use only
-all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]
-default = ["graphmap", "stable_graph", "matrix_graph"]
+all = ["unstable", "quickcheck", "matrix_graph", "stable-graph", "graphmap"]
+default = ["graphmap", "stable-graph", "matrix_graph"]
 
 generate = [] # For unstable features
 
 graphmap = []
 matrix_graph = []
 serde-1 = ["serde", "serde_derive"]
-stable_graph = []
+stable-graph = []
 unstable = ["generate"]
 
 
