fix: compile errors

--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 funty = { version = "2.0.0", default-features = false }
-fixedbitset = { workspace = true, optional = true }
+fixedbitset = { workspace = true }
 serde = { workspace = true, optional = true, features = ['alloc'] }
 
-petgraph-core = { workspace = true, features = ['alloc'] }
+petgraph-core = { workspace = true, features = ['alloc', 'fixedbitset'] }
 
 [dev-dependencies]
 # Used for documentation examples
@@ -18,5 +18,5 @@ petgraph.workspace = true
 
 [features]
 default = ["std", "stable"]
-std = ["fixedbitset?/std", "petgraph-core/std", "serde/std"]
+std = ["fixedbitset/std", "petgraph-core/std", "serde/std"]
 stable = []
