--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,12 @@ members = ["serialization-tests", "core", "graph"]
 
 [workspace.dependencies]
 fixedbitset = { version = "0.4", default-features = false }
+serde = { version = "1.0", default-features = false }
+
 petgraph = { path = "." }
 petgraph-core = { path = "./core", default-features = false }
 petgraph-graph = { path = "./graph", default-features = false }
-serde = { version = "1.0", default-features = false }
+petgraph-adjacency-list = {path = "./adjacency-list", default-features = false }
 
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
@@ -45,6 +47,7 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 petgraph-core = { workspace = true }
 petgraph-graph = { workspace = true }
+petgraph-adjacency-list = { workspace = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
