--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ members = ["serialization-tests", "core", "graph"]
 [workspace.dependencies]
 fixedbitset = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false }
+funty = { version = "2.0", default-features = false }
 
 petgraph = { path = "." }
 petgraph-core = { path = "./core", default-features = false }
