--- a/adjacency-list/Cargo.toml
+++ b/adjacency-list/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-petgraph-core = { workspace = true, features = ['alloc'] }
+funty.workspace = true
 fixedbitset.workspace = true
+
+petgraph-core = { workspace = true, features = ['alloc', 'fixedbitset'] }
 
 [dev-dependencies]
 
