--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-funty = { version = "2.0.0", default-features = false }
+funty.workspace = true
 fixedbitset = { workspace = true, optional = true }
 
 [dev-dependencies]
