--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ members = ["serialization-tests", "core", "graph", "adjacency-list", "graphmap"]
 fixedbitset = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false }
 funty = { version = "2.0", default-features = false }
+indexmap = { version = "1.9.3", default-features = false }
 
 petgraph = { path = "." }
 petgraph-core = { path = "./core", default-features = false }
@@ -50,7 +51,7 @@ serde_derive = { version = "1.0", optional = true }
 petgraph-core = { workspace = true }
 petgraph-graph = { workspace = true }
 petgraph-adjacency-list = { workspace = true }
-petgraph-graphmap = { workspace = true }
+petgraph-graphmap = { workspace = true, features = ['convert'] }
 
 [dev-dependencies]
 bincode = "1.3.3"
