--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,9 +51,9 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 petgraph-core = { workspace = true }
 petgraph-graph = { workspace = true }
-petgraph-adjacency-matrix = { workspace = true }
-petgraph-graphmap = { workspace = true, features = ['convert'] }
-petgraph-csr = { workspace = true }
+petgraph-adjacency-matrix = { workspace = true, optional = true }
+petgraph-graphmap = { workspace = true, features = ['convert'], optional = true }
+petgraph-csr = { workspace = true, optional = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -64,17 +64,19 @@ rand = "0.5.5"
 
 [features]
 
-# feature flags for testing use only
-all = ["unstable", "quickcheck", "matrix_graph", "stable-graph", "graphmap"]
-default = ["graphmap", "stable-graph", "matrix_graph"]
 
-generate = [] # For unstable features
+default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
 
-graphmap = []
-matrix_graph = []
-serde-1 = ["serde", "serde_derive"]
+#generate = [] # For unstable features
+
+graphmap = ["dep:petgraph-graphmap"]
+matrix-graph = []
+csr = ["dep:petgraph-csr"]
+serde = ["dep:serde", "serde_derive"]
 stable-graph = ["petgraph-graph/stable"]
-unstable = ["generate"]
+adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
+#unstable = ["generate"]
+std = ["petgraph-core/std", "petgraph-graph/std", "petgraph-adjacency-matrix?/std", "petgraph-graphmap?/std", "petgraph-csr?/std"]
 
 
 [lib]
