feat: run experimental rustfmt for cargo.toml

--- a/adjacency-matrix/Cargo.toml
+++ b/adjacency-matrix/Cargo.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-funty.workspace = true
 fixedbitset.workspace = true
-
-petgraph-core = { workspace = true, features = ['alloc', 'fixedbitset'] }
+funty.workspace = true
+petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
 
 [dev-dependencies]
 
