--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,20 @@
 [package]
 name = "petgraph"
 version = "0.6.3"
-
 authors = [
     "bluss",
     "Agustín Borgna <agustinborgna@gmail.com>",
     "Anton Kochkov <xvilka@gmail.com>",
     "Bilal Mahmoud <mahmoud@fastmail.com>"
 ]
-
-edition = "2021"
-rust-version = "1.65.0"
-
-license = "MIT OR Apache-2.0"
-
-description = "Graph data structure library. Provides graph types and graph algorithms."
-documentation = "https://docs.rs/petgraph/"
-repository = "https://github.com/petgraph/petgraph"
-
-keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
 categories = ["data-structures"]
+documentation = "https://docs.rs/petgraph/"
+edition = "2021"
+keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/petgraph/petgraph"
+rust-version = "1.65.0"
+description = "Graph data structure library. Provides graph types and graph algorithms."
 
 [package.metadata.docs.rs]
 features = ["serde-1", "quickcheck"]
@@ -28,14 +23,21 @@ features = ["serde-1", "quickcheck"]
 no-dev-version = true
 
 [workspace]
-members = ["serialization-tests", "core", "graph", "adjacency-matrix", "graphmap", "csr", "matrix-graph"]
+members = [
+    "serialization-tests",
+    "core",
+    "graph",
+    "adjacency-matrix",
+    "graphmap",
+    "csr",
+    "matrix-graph"
+]
 
 [workspace.dependencies]
 fixedbitset = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false }
 funty = { version = "2.0", default-features = false }
 indexmap = { version = "1.9.3", default-features = false }
-
 petgraph = { path = "." }
 petgraph-core = { path = "./core", default-features = false }
 petgraph-graph = { path = "./graph", default-features = false }
@@ -47,16 +49,20 @@ petgraph-matrix-graph = { path = "./matrix-graph", default-features = false }
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
 indexmap = { version = "1.7", features = ["std"] }
+petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
+petgraph-core = { workspace = true, default-features = false }
+petgraph-csr = { workspace = true, optional = true, default-features = false }
+petgraph-graph = { workspace = true, default-features = false }
+petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
-petgraph-core = { workspace = true, default-features = false }
-petgraph-graph = { workspace = true, default-features = false }
-petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
-petgraph-graphmap = { workspace = true, features = ['convert'], optional = true, default-features = false }
-petgraph-csr = { workspace = true, optional = true, default-features = false }
-petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
+[dependencies.petgraph-graphmap]
+workspace = true
+features = ["convert"]
+optional = true
+default-features = false
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -66,16 +72,14 @@ odds = { version = "0.4.0" }
 rand = "0.5.5"
 
 [features]
+adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
+csr = ["dep:petgraph-csr"]
 default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
-
 #generate = [] # For unstable features
-
 graphmap = ["dep:petgraph-graphmap"]
 matrix-graph = ["dep:petgraph-matrix-graph"]
-csr = ["dep:petgraph-csr"]
 serde = ["dep:serde", "serde_derive"]
 stable-graph = ["petgraph-graph/stable"]
-adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
 #unstable = ["generate"]
 std = [
     "petgraph-core/std",
@@ -85,13 +89,11 @@ std = [
     "petgraph-csr?/std"
 ]
 
-
 [lib]
 bench = false
-
 name = "petgraph"
-
-[profile.release]
 
 [profile.bench]
 debug = true
+
+[profile.release]
