--- a/matrix-graph/Cargo.toml
+++ b/matrix-graph/Cargo.toml
@@ -4,13 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-petgraph-core = { workspace = true, features = ['alloc', 'indexmap'] }
+petgraph-core = { workspace = true, features = ["alloc", "indexmap"] }
 
 [dev-dependencies]
 
 [features]
 default = ["std"]
-std = ["petgraph-core/std", "indexmap/std", "serde?/std"]
-serde = ["dep:serde", "convert"]
+std = ["petgraph-core/std"]
